--- a/about.qmd
+++ b/about.qmd
@@ -34,7 +34,7 @@ Some of the most amazing sunsets I have ever seen occurred during the cruises to
 
 I extended my research on Fuegian sprat during a Postdoctoral fellowship while working as a Part-time Lecturer of *Biostatistics* at the UBA.
 
-During my last years of the PhD I got involved with the [R-Ladies Buenos Aires chapter](https://rladiesba.netlify.app/), first as an attendant to their meetings, and then as an organizer. This experience was so positive and enriching that it led me to get involved with many other amazing [communities of practice](communities.qmd). So, besides my passion for marine sciences, I became an advocate for [open science practices]{.bold}.
+During my last years of the PhD I got involved with the [R-Ladies Buenos Aires chapter](https://rladiesba.netlify.app/), first as an attendant to their meetings, and then as an organizer. This experience was so positive and enriching that it led me to get involved with many other amazing [communities of practice](communities.qmd). So, besides my passion for marine sciences, I became an advocate for [open science practices]{.bold} and I embarked in the creation of a new [community by and for marine early career researchers from Latin America (JICMar)]{.bold} (for the sylabus in Spanish).
 
 <br>
 
